[package]
name = "bpf-sys"
version = "2.3.0"
description = "Bindings for libbpf"
repository = "https://github.com/foniod/redbpf"
homepage = "https://foniod.org"
documentation = "https://docs.rs/bpf-sys"
authors = ["Peter Parkanyi <p@symmetree.dev>", "Junyeong Jeong <rhdxmr@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["bpf", "ebpf", "ffi"]

[dependencies]
zero = "0.1"
libc = "0.2"
regex = { version = "1.5" }
glob = "0.3.0"
libbpf-sys = "0.6.2"

[package.metadata.docs.rs]
all-features = true
